# hw10.1

./: README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: generators.py  masks.py  processing.py  widget.py
tests/: test.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
